17june changes