@@ -7,15 +7,15 @@ import java.util.stream.IntStream;
 
 public class CompareStringsInList {
     public static void main(String[] args) {
-        List<String> list = Arrays.asList("apple", "banana", "cherry", "date", "banana");
-
+        List<String> list = Arrays.asList("apple", "banana", "cherry", "dates", "banana");
+        list.add("dsds");
         List<String> duplicates = IntStream.range(0, list.size())
-                .boxed()
+                .boxed()    //Converts the primitive int stream to a stream of Integer objects.
                 .flatMap(i -> IntStream.range(i + 1, list.size())
                         .filter(j -> list.get(i).equals(list.get(j)))
                         .mapToObj(j -> list.get(i)))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Duplicate strings: " + duplicates);
     }
